--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
           <div class="products">
             <div class="product">
               <div class="product-img">
-                <img src="images/mic.png" alt="" />
+                <img src="images/tripod.png" alt="" />
               </div>
               <div class="product-detail">
                 <h2 class="product-name">Flex Tripod</h2>
-                <p class="product-price">$ 50.48</p>
+                <p class="product-price">$ 540.48</p>
                 <div class="product-rating">
                   <i class="fa fa-star" aria-hidden="true"></i>
                   <i class="fa fa-star" aria-hidden="true"></i>
@@ -110,7 +110,73 @@
                 <img src="images/mic.png" alt="" />
               </div>
               <div class="product-detail">
-                <h2 class="product-name">Flex Tripod</h2>
+                <h2 class="product-name">Microphone</h2>
+                <p class="product-price">$ 150.48</p>
+                <div class="product-rating">
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star-half-o" aria-hidden="true"></i>
+                  <small>4.99</small>
+                </div>
+                <p class="product-text-small">
+                  <small>Worldwide shifting</small><br />
+                  <small>available </small> <br />
+                  <small>Buyers protection possible!</small>
+                </p>
+              </div>
+            </div>
+            <div class="product">
+              <div class="product-img">
+                <img src="images/airpod.png " alt="" />
+              </div>
+              <div class="product-detail">
+                <h2 class="product-name">Airpod</h2>
+                <p class="product-price">$ 450.48</p>
+                <div class="product-rating">
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star-half-o" aria-hidden="true"></i>
+                  <small>4.99</small>
+                </div>
+                <p class="product-text-small">
+                  <small>Worldwide shifting</small><br />
+                  <small>available </small> <br />
+                  <small>Buyers protection possible!</small>
+                </p>
+              </div>
+            </div>
+            <div class="product">
+              <div class="product-img">
+                <img src="images/drone.png" alt="" />
+              </div>
+              <div class="product-detail">
+                <h2 class="product-name">Drone</h2>
+                <p class="product-price">$ 350.48</p>
+                <div class="product-rating">
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star-half-o" aria-hidden="true"></i>
+                  <small>4.99</small>
+                </div>
+                <p class="product-text-small">
+                  <small>Worldwide shifting</small><br />
+                  <small>available </small> <br />
+                  <small>Buyers protection possible!</small>
+                </p>
+              </div>
+            </div>
+            <div class="product">
+              <div class="product-img">
+                <img src="images/lights.png" alt="" />
+              </div>
+              <div class="product-detail">
+                <h2 class="product-name">Light setup</h2>
                 <p class="product-price">$ 50.48</p>
                 <div class="product-rating">
                   <i class="fa fa-star" aria-hidden="true"></i>
@@ -129,10 +195,54 @@
             </div>
             <div class="product">
               <div class="product-img">
-                <img src="images/mic.png" alt="" />
+                <img src="images/setup.png" alt="" />
               </div>
               <div class="product-detail">
-                <h2 class="product-name">Flex Tripod</h2>
+                <h2 class="product-name">Photo</h2>
+                <p class="product-price">$ 52.48</p>
+                <div class="product-rating">
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star-half-o" aria-hidden="true"></i>
+                  <small>4.99</small>
+                </div>
+                <p class="product-text-small">
+                  <small>Worldwide shifting</small><br />
+                  <small>available </small> <br />
+                  <small>Buyers protection possible!</small>
+                </p>
+              </div>
+            </div>
+            <div class="product">
+              <div class="product-img">
+                <img src="images/camera.png" alt="" />
+              </div>
+              <div class="product-detail">
+                <h2 class="product-name">Vlogging camera</h2>
+                <p class="product-price">$ 59.48</p>
+                <div class="product-rating">
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star-half-o" aria-hidden="true"></i>
+                  <small>4.99</small>
+                </div>
+                <p class="product-text-small">
+                  <small>Worldwide shifting</small><br />
+                  <small>available </small> <br />
+                  <small>Buyers protection possible!</small>
+                </p>
+              </div>
+            </div>
+            <div class="product">
+              <div class="product-img">
+                <img src="images/action.png" alt="" />
+              </div>
+              <div class="product-detail">
+                <h2 class="product-name">Action</h2>
                 <p class="product-price">$ 50.48</p>
                 <div class="product-rating">
                   <i class="fa fa-star" aria-hidden="true"></i>
@@ -151,121 +261,11 @@
             </div>
             <div class="product">
               <div class="product-img">
-                <img src="images/mic.png" alt="" />
+                <img src="images/single-light.png" alt="" />
               </div>
               <div class="product-detail">
-                <h2 class="product-name">Flex Tripod</h2>
-                <p class="product-price">$ 50.48</p>
-                <div class="product-rating">
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star-half-o" aria-hidden="true"></i>
-                  <small>4.99</small>
-                </div>
-                <p class="product-text-small">
-                  <small>Worldwide shifting</small><br />
-                  <small>available </small> <br />
-                  <small>Buyers protection possible!</small>
-                </p>
-              </div>
-            </div>
-            <div class="product">
-              <div class="product-img">
-                <img src="images/mic.png" alt="" />
-              </div>
-              <div class="product-detail">
-                <h2 class="product-name">Flex Tripod</h2>
-                <p class="product-price">$ 50.48</p>
-                <div class="product-rating">
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star-half-o" aria-hidden="true"></i>
-                  <small>4.99</small>
-                </div>
-                <p class="product-text-small">
-                  <small>Worldwide shifting</small><br />
-                  <small>available </small> <br />
-                  <small>Buyers protection possible!</small>
-                </p>
-              </div>
-            </div>
-            <div class="product">
-              <div class="product-img">
-                <img src="images/mic.png" alt="" />
-              </div>
-              <div class="product-detail">
-                <h2 class="product-name">Flex Tripod</h2>
-                <p class="product-price">$ 50.48</p>
-                <div class="product-rating">
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star-half-o" aria-hidden="true"></i>
-                  <small>4.99</small>
-                </div>
-                <p class="product-text-small">
-                  <small>Worldwide shifting</small><br />
-                  <small>available </small> <br />
-                  <small>Buyers protection possible!</small>
-                </p>
-              </div>
-            </div>
-            <div class="product">
-              <div class="product-img">
-                <img src="images/mic.png" alt="" />
-              </div>
-              <div class="product-detail">
-                <h2 class="product-name">Flex Tripod</h2>
-                <p class="product-price">$ 50.48</p>
-                <div class="product-rating">
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star-half-o" aria-hidden="true"></i>
-                  <small>4.99</small>
-                </div>
-                <p class="product-text-small">
-                  <small>Worldwide shifting</small><br />
-                  <small>available </small> <br />
-                  <small>Buyers protection possible!</small>
-                </p>
-              </div>
-            </div>
-            <div class="product">
-              <div class="product-img">
-                <img src="images/mic.png" alt="" />
-              </div>
-              <div class="product-detail">
-                <h2 class="product-name">Flex Tripod</h2>
-                <p class="product-price">$ 50.48</p>
-                <div class="product-rating">
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star-half-o" aria-hidden="true"></i>
-                  <small>4.99</small>
-                </div>
-                <p class="product-text-small">
-                  <small>Worldwide shifting</small><br />
-                  <small>available </small> <br />
-                  <small>Buyers protection possible!</small>
-                </p>
-              </div>
-            </div>
-            <div class="product">
-              <div class="product-img">
-                <img src="images/mic.png" alt="" />
-              </div>
-              <div class="product-detail">
-                <h2 class="product-name">Flex Tripod</h2>
-                <p class="product-price">$ 50.48</p>
+                <h2 class="product-name">Green screen</h2>
+                <p class="product-price">$ 100.48</p>
                 <div class="product-rating">
                   <i class="fa fa-star" aria-hidden="true"></i>
                   <i class="fa fa-star" aria-hidden="true"></i>
