--- a/index.html
+++ b/index.html
@@ -288,6 +288,37 @@
             ></a>
           </p>
         </section>
+        <section class="contact">
+          <div class="contact-img">
+            <img src="images/gear.png" alt="" />
+          </div>
+          <div class="contact-form">
+            <h3>Are you interested to become an influencer?</h3>
+            <p><small>What are you waiting for?contact with us</small></p>
+            <div class="form-wrap">
+              <form action="">
+                <div class="form-group">
+                  <label for="name">Name</label>
+                  <input type="text" placeholder="enter name" />
+                </div>
+                <div class="form-group">
+                  <label for="email">Email</label>
+                  <input type="text" placeholder="enter email" />
+                </div>
+                <div class="form-group">
+                  <label for="message"></label>
+                  <textarea
+                    name="message"
+                    id="message"
+                    cols="30"
+                    rows="10"
+                  ></textarea>
+                </div>
+                <button class="btn" type="submit">Submit</button>
+              </form>
+            </div>
+          </div>
+        </section>
       </div>
     </main>
     <footer>
