--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
               influencer
             </h1>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem
-              vestibulum <br />
-              sed scelerisque eros. Lectus faucibus.
+              Influencer An influencer is someone in your niche or industry with
+              sway over your<br />
+              target audience. Turn yourself an influencer and enjoy the life.
+              Let's go!!!
             </p>
             <a href="#" class="btn"
               >Preboon now <i class="fa fa-arrow-right" aria-hidden="true"></i
