--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
     <!-- Header section with nav -->
     <header>
       <div class="header-container">
+        <div class="res-nav">
+          <ul>
+            <li>
+              <a href="#"><i class="fa fa-bars" aria-hidden="true"></i></a>
+            </li>
+            <h3><a href="index.html">Influencer Products</a></h3>
+            <li>
+              <a href=""
+                ><i class="fa fa-shopping-cart" aria-hidden="true"></i
+              ></a>
+            </li>
+          </ul>
+        </div>
         <nav class="navbar">
           <span class="nav-text"><h3>Influencer Products</h3></span>
           <ul>
@@ -45,7 +58,7 @@
               Let's go!!!
             </p>
             <a href="#" class="btn"
-              >Preboon now <i class="fa fa-arrow-right" aria-hidden="true"></i
+              >Prebook now <i class="fa fa-arrow-right" aria-hidden="true"></i
             ></a>
           </div>
           <div class="header-img">
